2007-06-12  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-seekbar.c: add gtkrange.h header
	* src/hildon-caption.c: remove unused variable

2007-06-08  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* configure.ac: Remove dysfunctional AC_ARG_ENABLE. Pointed out by
	Loic Minier.

2007-06-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.9-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-06-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/hildon-window.c (hildon_window_window_state_event,
	hildon_window_is_topmost_notify, hildon_window_class_init): Stop the
	escape timeout on focus-out-event rather than notify::is-topmost; the
	latter doesn't get called when menus pop up. Fixes: NB#52946, MB#1101

2007-06-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-window.c: Adding a patch from Tommi Komulainen to pass the
	correct timestamp and button to gtk_menu_popup. Fixes MB#1466. 

2007-06-07  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-window: actually, you need to use the macro always, there's
	no private pointer in the instance structure. We should have cleaned this up
	when we had the chance...
	
2007-06-07  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-window.c: do not get the private date from HildonWindow before
	it passes the g_return_if_fail check. Once it's passed the test, there's no
	need to g_assert that it exists. Do not create a HildonWindowPrivate variable
	if you are only going to access the data once. Whitespace cleanups.

2007-06-04  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c: set children visible before allocation.
	* src/hildon-bread-crumb-widget.c: set xalign to 0.0 for labels.

2007-06-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.8-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-06-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
